# models/Month.php
@@ -1,0 +1,36 @@
+<?php
+
+namespace app\models;
+
+use yii\db\ActiveRecord;
+
+/**
+ * This is the model class for table "months".
+ *
+ * @property int $id
+ * @property string $name
+ * @property string $created_at
+ * @property string $updated_at
+ */
+class Month extends ActiveRecord
+{
+    /**
+     * {@inheritdoc}
+     */
+    public static function tableName()
+    {
+        return 'months';
+    }
+
+    /**
+     * {@inheritdoc}
+     */
+    public function rules()
+    {
+        return [
+            [['name'], 'required'],
+            [['name'], 'string', 'max' => 10],
+            [['name'], 'unique'],
+        ];
+    }
+}
